# streamripper

./: .gitignore  COPYING  INSTALL  Makefile.am  README  configure.ac  streamripper.go
doc/: design.txt
install/deb/: changelog  control  copyright
install/rpm/: streamripper.spec
src/: streamripper.go
src/ripper/: pool.go  server.go
test/ripper/: pool_test.go
