
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([streamripper], [2.0], [kim@developmint.work])
AM_INIT_AUTOMAKE

# Probably want to add some tests for Go here...
# We could use gccgo, but we will use golang for now
# For gccgo 
# See https://lists.gnu.org/archive/html/bug-autoconf/2013-01/msg00006.html
#AC_PROG_GO
AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
